add dependencies, profiles, scaffold live repl ns